--- a/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
@@ -225,7 +225,7 @@
 		                <a href="${a.url}" target="_blank">
 		                <span class="author-name ">${a.ctgName}</span>
 		                </a>
-		                <a href="https://www.huxiu.com/vip" target="_blank" title="购买VIP会员"></a>
+		                <a href="" target="_blank" title="购买VIP会员"></a>
 		                <span class="time">${a.date?string(dateFormat)}</span>
 		                <!-- <i class="icon icon-cmt"></i><em>${a.date}</em>
 		                <i class="icon icon-fvr"></i><em>0</em> -->
