--- a/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
@@ -383,7 +383,7 @@
         <span class="pull-right project-more"><a href="https://www.huxiu.com/chuangye" class="transition" target="_blank">全部</a></span>
         <span class="span-mark"></span>
         <ul>
-        		[@cms_content_list count='3' typeId='2'  channelId='' orderBy='4' titLen='22' channelOption='0' dateFormat='yyyy-MM-dd']   
+        		[@cms_content_list count='3' typeId='2'  channelId='100' orderBy='4' titLen='22' channelOption='0' dateFormat='yyyy-MM-dd']   
     			[#list tag_list as a]
     			<li>
                     <div class="project-pic">
