--- a/WebContent/WEB-INF/t/cms/www/default/channel/news_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/channel/news_hx.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0038)https://www.huxiu.com/channel/106.html -->
 <html><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>${site.name}</title>
+    <title>${channel.title!channel.name} - ${site.name}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <meta name="renderer" content="webkit">
