--- a/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0022)https://www.huxiu.com/ -->
 <html><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>${site.name}</title>
+    <title>${site.name} - ${site.shortName}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <meta name="renderer" content="webkit">
@@ -20,14 +20,11 @@
     <link rel="stylesheet" type="text/css" href="/${res}/css/hx/cy.css">
 <link rel="stylesheet" type="text/css" href="/${res}/css/hx/o.css">
 <link rel="stylesheet" type="text/css" href="/${res}/css/hx/video.css">
+<link rel='icon' href='${base}/r/cms/www/k.ico' type='image/x-ico' /> 
     <!--[if lt IE 9]>
     <script src="https://static.huxiucdn.com/common/html5shiv/html5shiv.min.js"></script>
     <script src="https://static.huxiucdn.com/common/respond/respond.min.js"></script>
     <![endif]-->
-    <link rel="apple-touch-icon" sizes="76x76" href="https://static.huxiucdn.com/common/image/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://static.huxiucdn.com/common/image/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://static.huxiucdn.com/common/image/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://static.huxiucdn.com/common/image/apple-touch-icon-180x180.png">
     <script async="" src="/${res}/js/hx/sensorsdata.sdk.js"></script>
     <script src="/${res}/js/hx/push.js"></script>
     <script async="" src="/${res}/js/hx/analytics.js"></script>
