--- a/WebContent/WEB-INF/t/cms/www/default/content/news_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/content/news_hx.html
@@ -13,7 +13,7 @@
 <script src="/${res}/js/hx/cyberplayer.js"></script>
 
 
-<title>${content.title} - ${site.name} - ${site.shortName}</title>
+<title>${content.title} - ${site.name}</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
