--- a/WebContent/WEB-INF/t/cms/www/mobile/alone/alone.html
+++ b/WebContent/WEB-INF/t/cms/www/mobile/alone/alone.html
@@ -27,7 +27,7 @@ $(function() {
 <div class="container">
 	[#include "../include/header.html"/]
     [#include "../include/search_csi.html"/]
-    [#include "../include/navi.html"/]
+    <!-- [#include "../include/navi.html"/] -->
 
 	<div class="w700 mt10">
   		<div class="website">当前位置：<a href="${base}/">首页</a> > ${channel.title!channel.name}</div>
