--- a/WebContent/WEB-INF/t/cms/www/default/content/inc_share_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/content/inc_share_hx.html
@@ -1,6 +1,6 @@
 <!--普通文章分享微博-->
 <li><a
-	href="javascript:(function(){window.open('http://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent('${content.title}')+'&url='+encodeURIComponent('${content.url}')+'&pic='+encodeURIComponent('http://www.cnews123.com${content.typeImg!}'),'_blank','width=450,height=400');})()"
+	href="javascript:(function(){window.open('http://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent('${content.title}')+'&url='+encodeURIComponent('http://www.cnews123.com'+'${content.url}')+'&pic='+encodeURIComponent('http://www.cnews123.com${content.typeImg!}'),'_blank','width=450,height=400');})()"
 	title="新浪微博分享"> <i
 		class="icon icon-article icon-article-wb js-weibo "
 		data-location="article" data-f="pc-weibo-article" aid="200762"></i>
