--- a/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
+++ b/WebContent/WEB-INF/t/cms/www/default/index/index_hx.html
@@ -147,7 +147,7 @@
                     </a>
                     <a href="${a.url}" target="_blank" title="${a.title}">
                         <div class="big2-pic-content">
-                            <h2 class="t-h1">${a.title}</h2>
+                            <h2 class="t-h1">[@text_cut s=a.title len='27' append='...' /]</h2>
                         </div>
                     </a>
                 </div>
@@ -159,7 +159,7 @@
                     </a>
                     <a href="${a.url}" target="_blank" title="${a.title}">
                         <div class="big2-pic-content">
-                            <h2 class="t-h1">${a.title}</h2>
+                            <h2 class="t-h1">[@text_cut s=a.title len='27' append='...' /]</h2>
                         </div>
                     </a>
                 </div>
